# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-desktop"
description = "QSL desktop shell: Tauri 2 host process for the Dioxus UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "qsl-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[features]
# `servo` controls whether the Servo-backed renderer is linked into
# the desktop app. Default-on so `cargo build -p qsl-desktop`
# produces the real reader pane on Linux / macOS; turn off for a
# stubbed build (e.g. Windows CI until Servo-on-Windows lands).
default = ["servo"]
servo = ["qsl-renderer/servo"]

[dependencies]
qsl-auth = { workspace = true }
qsl-core = { workspace = true }
qsl-imap-client = { workspace = true }
qsl-ipc = { workspace = true }
qsl-jmap-client = { workspace = true }
qsl-mime = { workspace = true }
qsl-storage = { workspace = true }
qsl-sync = { workspace = true }
qsl-telemetry = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
# OS-native desktop notifications. Plugin path means we don't need
# any extra capability tokens — the plugin's default permission set
# includes `notification:default` which `core:default` re-exports.
tauri-plugin-notification = "2"
# The workspace-level decl sets `default-features = false`; desktop
# re-enables renderer's `servo` via its OWN `[features]` table so a
# `cargo build -p qsl-desktop --no-default-features` cleanly
# drops Servo (Windows CI path).
qsl-renderer = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
# `rustls` is a transitive dep (servo + tokio-rustls + hyper-rustls
# all pull it in). Once Servo joins the graph both `ring` and
# `aws-lc-rs` crypto providers end up enabled at the Cargo feature
# level, so `rustls::crypto::CryptoProvider::install_default()` has
# to be called explicitly at startup — otherwise Servo's resource
# manager panics on the first HTTPS resolution. Only the `ring`
# feature is enabled here: tokio-rustls elsewhere in the workspace
# already uses ring, so picking it keeps the two halves consistent.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
directories = { workspace = true }
dpi = { workspace = true }
raw-window-handle = { workspace = true }
serde = { workspace = true }
# `devtools` feature enables Ctrl+Shift+I in the WebView even on
# release builds. Phase 0 preview only — strip before going public.
# `unstable` exposes `tauri::window::WindowBuilder` (plain OS
# window, no webview) — we use it for the Servo reader pane so the
# Servo surfman GL context isn't fighting a webkit2gtk GL context
# on the same Wayland surface; see renderer_bridge.rs and
# docs/week-6-day-2-notes.md § Wayland.
tauri = { workspace = true, features = ["devtools", "unstable"] }
tokio = { workspace = true }
tracing = { workspace = true }
# Used by the `open_external_url` IPC command to launch URLs (clicked
# in the reader pane's email iframe) in the user's OS default browser.
webbrowser = { workspace = true }

# Linux-only: the child-widget integration for the Servo reader pane.
# See `apps/desktop/src-tauri/src/linux_gtk.rs` and
# `docs/week-6-day-4-gtk-integration.md`. All pulled in transitively
# by Tauri 2's Linux backend already; listing here promotes them to
# direct deps so the linux_gtk module can import them without relying
# on transitive versioning.
[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.18"
gdkwayland-sys = "0.18"
gdkx11 = "0.18"
glib = "0.18"
gtk = "0.18"

[lints]
workspace = true
