# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-desktop"
description = "QSL desktop shell: Tauri 2 host process for the Dioxus UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "qsl-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
qsl-auth = { workspace = true }
qsl-core = { workspace = true }
qsl-imap-client = { workspace = true }
qsl-ipc = { workspace = true }
qsl-jmap-client = { workspace = true }
qsl-mime = { workspace = true }
qsl-search = { workspace = true }
qsl-storage = { workspace = true }
qsl-sync = { workspace = true }
qsl-telemetry = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
# OS-native desktop notifications. Plugin path means we don't need
# any extra capability tokens — the plugin's default permission set
# includes `notification:default` which `core:default` re-exports.
tauri-plugin-notification = "2"
# OS-native "launch on login" via the user's standard autostart
# mechanism (libuv-style XDG `~/.config/autostart/qsl.desktop` on Linux,
# Launch Agent on macOS, registry Run key on Windows). The plugin
# writes / removes the autostart entry; we don't need to touch the
# platform plumbing ourselves.
tauri-plugin-autostart = "2"
# Persist window position / size / maximized state between launches.
# Saved per-window-label under the app's data dir; restored at window
# creation. Filtered to the main + settings windows only — reader
# popups have unique labels and the saved state would just bloat the
# config file with one entry per message ever opened.
tauri-plugin-window-state = "2"
# Enforce a single running QSL instance per user. A second launch
# (re-clicking the desktop entry, double-launching from the autostart
# helper, etc.) sends its argv to the existing process and exits;
# the running instance focuses its main window. Avoids two processes
# fighting over the same SQLite WAL and the same IMAP IDLE slots.
tauri-plugin-single-instance = "2"
# Receive `mailto:` URLs from the OS so QSL can act as the default
# email client. Plugin registers the scheme handler in the bundled
# .desktop file / Info.plist / Windows registry, and surfaces both
# cold-start (argv) and runtime (already-running) URL deliveries
# through the same `on_open_url` callback.
tauri-plugin-deep-link = "2"
async-trait = { workspace = true }
chrono = { workspace = true }
# rustls is reached via tokio-rustls / hyper-rustls / lettre.
# `rustls::crypto::CryptoProvider::install_default()` runs once at
# startup so the rest of the graph picks `ring` consistently.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
directories = { workspace = true }
serde = { workspace = true }
# `devtools` feature enables Ctrl+Shift+I in the WebView even on
# release builds. Phase 0 preview only — strip before going public.
tauri = { workspace = true, features = ["devtools"] }
tokio = { workspace = true }
tracing = { workspace = true }
# `url` parses the URL handed to `open_external_url` so we can run
# it through `qsl_core::clean_outbound_url` before invoking the
# OS default browser. Already in the dep graph transitively; declare
# it here so the import is explicit.
url = { workspace = true }
# Used by the `open_external_url` IPC command to launch URLs (clicked
# in the reader pane's email iframe) in the user's OS default browser.
webbrowser = { workspace = true }
# Native file picker for the compose-pane "Attach" button. Tauri 2's
# dialog plugin would also work but adds a JS-bridge surface and a
# capability token; rfd is a single direct dep that exposes the
# underlying GTK / NSOpenPanel / IFileDialog without ceremony.
rfd = { version = "0.15", default-features = false, features = ["gtk3", "tokio"] }
mime_guess = "2"
# Used by `imap_idle` and `jmap_push` for jittered exponential backoff
# on watcher reconnect — avoids reconnect storms when several
# accounts lose network simultaneously (Wi-Fi flap, NAT eviction).
# Already in the dep graph via qsl-auth, so no build-cost increase.
rand = { workspace = true }

# Linux-only: needed to enable webkit2gtk's spell-checker at the
# WebContext level. The `spellcheck` HTML attribute is a per-field
# opt-in but the engine itself is gated by
# `WebContext::set_spell_checking_enabled(true)`, which Tauri 2 / wry
# don't expose on their high-level API. We reach through
# `WebviewWindow::with_webview` to the underlying webkit2gtk handle.
# Pinned to the same minor as Tauri 2's transitive dep so the
# `webkit2gtk::WebView` types match.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[lints]
workspace = true
