# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-ui"
description = "Capytain desktop UI: Dioxus (Rust -> WASM) rendered inside the Tauri webview."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "capytain-ui"
path = "src/main.rs"

[dependencies]
capytain-ipc = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# wasm-bindgen + js-sys are only reachable inside Tauri's webview at
# runtime; gating on target_arch keeps `cargo check --workspace` clean
# on the host (x86_64 / aarch64) while still pulling the web backend in
# when `dx` builds for wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# `getrandom` is reachable transitively (capytain-auth → rand). On
# wasm32-unknown-unknown it needs a backend opt-in; `wasm_js` routes
# randomness through the browser's `crypto.getRandomValues`. Declare
# both major versions so feature unification reaches all copies.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true
