# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-ui"
description = "Capytain desktop UI: Dioxus (Rust -> WASM) rendered inside the Tauri webview."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "capytain-ui"
path = "src/main.rs"

[dependencies]
capytain-ipc = { workspace = true }
chrono = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# wasm-bindgen + js-sys are only reachable inside Tauri's webview at
# runtime; gating on target_arch keeps `cargo check --workspace` clean
# on the host (x86_64 / aarch64) while still pulling the web backend in
# when `dx` builds for wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
# Used by the compose pane's 5s auto-save debounce. Pulls only the
# `futures` feature so we get `gloo_timers::future::sleep` and
# nothing else on the wasm side.
gloo-timers = { version = "0.3", features = ["futures"] }

# `chrono::Utc::now()` on wasm32-unknown-unknown falls through to
# `std::time::SystemTime::now()`, which the stdlib leaves unimplemented
# and panics with "time not implemented on this platform". The
# `wasmbind` feature routes chrono's clock through `Date.now()` via
# js-sys instead. Workspace chrono only enables `clock` + `serde` so
# the host builds stay narrow; add the wasm-only feature here.
chrono = { workspace = true, features = ["wasmbind"] }

# `getrandom` is reachable transitively (capytain-auth → rand). On
# wasm32-unknown-unknown it needs a backend opt-in; `wasm_js` routes
# randomness through the browser's `crypto.getRandomValues`. Declare
# both major versions so feature unification reaches all copies.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true
